--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port=8090
 
+spring.datasource.url = jdbc:mysql://localhost:3306/parking
+
+spring.datasource.username = root
+spring.datasource.password = jyldyzbekov92
+
+
+spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.show-sql=true
+
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.flyway.enabled=true
+spring.flyway.out-of-order=true
+spring.flyway.baseline-on-migrate=false
