--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.datasource.username = root
 spring.datasource.password = jyldyzbekov92
 
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.out-of-order=true
 spring.flyway.baseline-on-migrate=false
