--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username = root
 spring.datasource.password = jyldyzbekov92
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
